# spec-weaver

./: =2.0  Makefile  README.md  pyproject.toml
.specification/: mkdocs.yml
.specification/docs/: index.md  plan.md  req.md  requirements.md  spec.md  specifications.md
.specification_test/: mkdocs.yml
.specification_test/docs/: index.md  requirements.md  specifications.md
.test_spec_build_v3/: mkdocs.yml
.test_spec_build_v3/docs/: index.md  req.md  spec.md
specification/features/: audit.feature  build.feature  ci.feature  data_extraction.feature  environment.py  impl_link.feature  review.feature  scaffold.feature  status.feature  timestamp.feature  trace.feature
specification/plans/: .doorstop.yml  PLAN-001.yml  PLAN-002.yml  PLAN-003.yml
specification/reqs/: .doorstop.yml  REQ-001.yml  REQ-002.yml  REQ-003.yml  REQ-004.yml  REQ-005.yml  REQ-006.yml  REQ-007.yml  REQ-008.yml  REQ-009.yml  REQ-010.yml  REQ-011.yml  REQ-012.yml  REQ-013.yml
specification/specs/: .doorstop.yml  SPEC-001.yml  SPEC-002.yml  SPEC-003.yml  SPEC-004.yml  SPEC-005.yml  SPEC-006.yml  SPEC-007.yml  SPEC-008.yml  SPEC-009.yml  SPEC-010.yml  SPEC-011.yml  SPEC-012.yml  SPEC-013.yml  SPEC-014.yml  SPEC-015.yml  SPEC-016.yml  SPEC-017.yml  SPEC-018.yml  SPEC-019.yml  SPEC-020.yml  SPEC-021.yml  SPEC-022.yml  SPEC-023.yml
src/spec_weaver/: cli.py  codegen.py  doorstop.py  gherkin.py  impl_scanner.py  step_resolver.py  test_results.py
tests/: test_cli.py  test_doorstop.py  test_gherkin.py  test_hierarchy.py  test_impl_scanner.py  test_scaffold.py  test_step_resolver.py  test_test_results.py  test_trace.py
tests/features/: step_audit.py  (+9 more)
(+120 files in other folders)
